🔥 PIC-1814: Remove redundant fields from DefendantEntity